Fix contrast in modal, admonition

--- a/resources/scss/partials/doc.scss
+++ b/resources/scss/partials/doc.scss
@@ -123,7 +123,7 @@ iframe {
         margin: $space-8 0 $space-8 (
             -$space-4
         );
-    color: $colors-neutral-50;
+    color: $colors-neutral-60;
     font-style: italic;
     font-size: 1.05rem;
 }
