--- a/resources/scss/partials/modal.scss
+++ b/resources/scss/partials/modal.scss
@@ -57,7 +57,7 @@
                 h2 {
                     font-size: 1rem;
                     margin: 0;
-                    color: $colors-neutral-60;
+                    color: $colors-neutral-70;
                 }
 
                 .modal-close {
@@ -67,7 +67,7 @@
                         margin-top: $space-1;
 
                         line {
-                            stroke: $colors-neutral-60;
+                            stroke: $colors-neutral-70;
                         }
                     }
                 }
@@ -87,7 +87,7 @@
 
             .modal-caption {
                 @extend .body-small;
-                color: $colors-neutral-40;
+                color: $colors-neutral-60;
                 text-align: center;
             }
         }
